5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1674_1101.log
== TEST (2019-04-25 11:36:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",consumo)
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",consumo)
elif(tipo == "C"):
	if(consumo==<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",consumo)
	else:
		consumo = consumo*0.66
		print("Valor total: R$",consumo)
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",consumo)
	else:
		consumo=consumo*0.60
		print("Valor total: R$",consumo)
else:
	print("Dados invalidos")

-- ERROR:
File "XXXX", line 17
    if(consumo==<=1000.0):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:36:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",consumo)
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",consumo)
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",consumo)
	else:
		consumo = consumo*0.66
		print("Valor total: R$",consumo)
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",consumo)
	else:
		consumo=consumo*0.60
		print("Valor total: R$",consumo)
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:36:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",consumo)
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",consumo)
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",consumo)
	else:
		consumo = consumo*0.66
		print("Valor total: R$",consumo)
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",consumo)
	else:
		consumo=consumo*0.60
		print("Valor total: R$",consumo)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.262794
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Valor total: R$ -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:37:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",consumo)
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",consumo)
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",consumo)
	else:
		consumo = consumo*0.66
		print("Valor total: R$",consumo)
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",consumo)
	else:
		consumo=consumo*0.60
		print("Valor total: R$",consumo)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.176616
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Valor total: R$ -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:37:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",consumo)
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",consumo)
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",consumo)
	else:
		consumo = consumo*0.66
		print("Valor total: R$",consumo)
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",consumo)
	else:
		consumo=consumo*0.60
		print("Valor total: R$",consumo)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.134508
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Valor total: R$ -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:38:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",consumo)
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",consumo)
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",consumo)
	else:
		consumo = consumo*0.66
		print("Valor total: R$",consumo)
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",consumo)
	else:
		consumo=consumo*0.60
		print("Valor total: R$",consumo)
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:41:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",consumo)
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",consumo)
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55

		print("Valor total: R$",consumo)
	else:
		consumo = consumo*0.60
		print("Valor total: R$",consumo)
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",consumo)
	else:
		consumo=consumo*0.60
		print("Valor total: R$",consumo)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.202006
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Valor total: R$ -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:41:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",consumo)
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",consumo)
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55

		print("Valor total: R$",consumo)
	else:
		consumo = consumo*0.60
		print("Valor total: R$",consumo)
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",consumo)
	else:
		consumo=consumo*0.60
		print("Valor total: R$",consumo)
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:43:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo = cosumo*0.65
		round(consumo,2)
		print("Valor total: R$",consumo)
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
      round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo = consumo*0.60
		round(consumo,2)
		print("Valor total: R$",consumo)
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo=consumo*0.60
		round(consumo,2)
		print("Valor total: R$",consumo)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.314288
-- ERROR:
  File "/home/codebench/codes/1674/1101/main.py", line 21
    round(consumo,2)
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:43:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo = cosumo*0.65
		round(consumo,2)
		print("Valor total: R$",consumo)
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
      round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo = consumo*0.60
		round(consumo,2)
		print("Valor total: R$",consumo)
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo=consumo*0.60
		round(consumo,2)
		print("Valor total: R$",consumo)
else:
	print("Dados invalidos")

-- ERROR:
File "XXXX", line 21
    round(consumo,2)
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:43:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo = cosumo*0.65
		round(consumo,2)
		print("Valor total: R$",consumo)
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
      round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo = consumo*0.60
		round(consumo,2)
		print("Valor total: R$",consumo)
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo=consumo*0.60
		round(consumo,2)
		print("Valor total: R$",consumo)
else:
	print("Dados invalidos")

-- ERROR:
File "XXXX", line 21
    round(consumo,2)
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:44:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo = cosumo*0.65
		round(consumo,2)
		print("Valor total: R$",consumo)
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
      round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo = consumo*0.60
		round(consumo,2)
		print("Valor total: R$",consumo)
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo=consumo*0.60
		round(consumo,2)
		print("Valor total: R$",consumo)
else:
	print("Dados invalidos")

-- ERROR:
File "XXXX", line 21
    round(consumo,2)
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:45:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo = cosumo*0.65
		round(consumo,2)
		print("Valor total: R$",consumo)
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
      round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo = consumo*0.60
		round(consumo,2)
		print("Valor total: R$",consumo)
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo=consumo*0.60
		round(consumo,2)
		print("Valor total: R$",consumo)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.178869
-- ERROR:
  File "/home/codebench/codes/1674/1101/main.py", line 21
    round(consumo,2)
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:45:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo = cosumo*0.65
		round(consumo,2)
		print("Valor total: R$",consumo)
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
      round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo = consumo*0.60
		round(consumo,2)
		print("Valor total: R$",consumo)
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo=consumo*0.60
		round(consumo,2)
		print("Valor total: R$",consumo)
else:
	print("Dados invalidos")

-- ERROR:
File "XXXX", line 21
    round(consumo,2)
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:46:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo = cosumo*0.65
		round(consumo,2)
		print("Valor total: R$",consumo)
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
      round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo = consumo*0.60
		round(consumo,2)
		print("Valor total: R$",consumo)
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo=consumo*0.60
		round(consumo,2)
		print("Valor total: R$",consumo)
else:
	print("Dados invalidos")

-- ERROR:
File "XXXX", line 21
    round(consumo,2)
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:46:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo = cosumo*0.65
		round(consumo,2)
		print("Valor total: R$",consumo)
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
      round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo = consumo*0.60
		round(consumo,2)
		print("Valor total: R$",consumo)
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo=consumo*0.60
		round(consumo,2)
		print("Valor total: R$",consumo)
else:
	print("Dados invalidos")

-- ERROR:
File "XXXX", line 21
    round(consumo,2)
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:46:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo = cosumo*0.65
		round(consumo,2)
		print("Valor total: R$",consumo)
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
      round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo = consumo*0.60
		round(consumo,2)
		print("Valor total: R$",consumo)
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		round(consumo,2)
		print("Valor total: R$",consumo)
	else:
		consumo=consumo*0.60
		round(consumo,2)
		print("Valor total: R$",consumo)
else:
	print("Dados invalidos")

-- ERROR:
File "XXXX", line 21
    round(consumo,2)
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:49:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.156195
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:50:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:50:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.143956
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:51:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:51:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:51:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.120145
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:51:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:51:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.130882
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:51:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:52:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R"):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:53:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R" and consumo>=0):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"and consumo>=0):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"and consumo>=0):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.135891
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:53:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R" and consumo>=0):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"and consumo>=0):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"and consumo>=0):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:53:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R" and consumo>=0):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"and consumo>=0):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"and consumo>=0):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.150926
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:53:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R" and consumo>=0):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"and consumo>=0):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"and consumo>=0):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:54:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R" and consumo>=0):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"and consumo>=0):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"and consumo>=0):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:55:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R" and consumo>=0):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"and consumo>=0):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"and consumo>=0):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.167561
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:55:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R" and consumo>=0):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"and consumo>=0):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"and consumo>=0):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.190666
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:55:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R" and consumo>=0):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = cosumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"and consumo>=0):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"and consumo>=0):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:57:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R" and consumo>=0):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"and consumo>=0):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"and consumo>=0):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.177593
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:57:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kwh","e","tipo",tipo)

if(tipo=="R" and consumo>=0):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"and consumo>=0):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"and consumo>=0):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.219996
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 12:00:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo:"))
tipo = input("Digite o tipo R OU I OU C: ").upper()

print("Entradas:",consumo,"kWh","e","tipo",tipo)

if(tipo=="R" and consumo>=0):
	if(consumo <=500.0):
		consumo = consumo*0.44
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.65
		print("Valor total: R$",round(consumo,2))
elif(tipo == "C"and consumo>=0):
	if(consumo<=1000.0):
		consumo = consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo = consumo*0.60
		print("Valor total: R$",round(consumo,2))
elif(tipo=="I"and consumo>=0):
	if(consumo<=5000.0):
		consumo=consumo*0.55
		print("Valor total: R$",round(consumo,2))
	else:
		consumo=consumo*0.60
		print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.140781
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
